Use userId to randomize a list of id videos