@@ -1,9 +1,7 @@
 package org.learningspringwithduc.recommendedvideo.controllers;
 
 import lombok.AllArgsConstructor;
-import org.learningspringwithduc.recommendedvideo.dtos.VideoIdDto;
 import org.learningspringwithduc.recommendedvideo.entities.RecommendedEntities;
-import org.learningspringwithduc.recommendedvideo.mapper.RecommendedMapper;
 import org.learningspringwithduc.recommendedvideo.services.RecommendedService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,23 +9,31 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
 @RequestMapping("/recommended")
 public class RecommendedController {
     private final RecommendedService recommendedService;
-    private final RecommendedMapper recommendedMapper;
 
     // Mock list of recommended ids
     @GetMapping("/{id}")
-    public ResponseEntity<List<VideoIdDto>> getRecommendedVideoIds(@PathVariable Long id) {
+    public ResponseEntity<List<Long>> getRecommendedVideoIds(@PathVariable Long id) {
        List<RecommendedEntities> recommendedVideos = recommendedService.getAllVideoIds();
 
-       List<VideoIdDto> recommendedIds = recommendedVideos.stream()
-               .map(recommendedMapper::entityToDto)
-               .toList();
+       Random random = new Random(id);
+
+       Collections.shuffle(recommendedVideos, random);
+       
+       // Extract id of videos
+       List<Long> recommendedIds = recommendedVideos.stream()
+               .limit(5)
+               .map(RecommendedEntities::getId)
+               .collect(Collectors.toList());
 
        return ResponseEntity.ok(recommendedIds);
     }
